# phi-ui

./: .gitignore  AGENTS.md  next.config.ts  package-lock.json  package.json  tsconfig.json
dyno-phi-wireframe/: README.md  index.html
public/mock/: af2-gb1.json
scripts/: export_benchmark_data.py
skills/: README.md  example_extractor.py  loader.py  registry.py
skills/align_structures/: SKILL.md
skills/alphafold/: SKILL.md  schema.yaml
skills/analyze_structure/: SKILL.md
skills/bindcraft/: SKILL.md  schema.yaml
skills/boltz/: SKILL.md  schema.yaml
skills/boltzgen/: SKILL.md  schema.yaml
skills/chai/: SKILL.md
skills/download_fasta/: SKILL.md
skills/dyno-phi/: README.md  SKILL.md  phi.py  pyproject.toml
skills/dyno-phi/alphafold/: SKILL.md
skills/dyno-phi/boltz/: SKILL.md
skills/dyno-phi/dyno_phi_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
skills/dyno-phi/esm2/: SKILL.md
skills/dyno-phi/esmfold/: SKILL.md
skills/dyno-phi/proteinmpnn/: SKILL.md
skills/dyno-phi/research/: SKILL.md
skills/ensembl/: SKILL.md
skills/esm2/: SKILL.md
skills/esmfold/: SKILL.md  schema.yaml
skills/filter_candidates/: SKILL.md
skills/filter_plddt/: SKILL.md
skills/generate_report/: SKILL.md
skills/interpro/: SKILL.md
skills/ligandmpnn/: SKILL.md
skills/pdb/: SKILL.md
skills/proteinmpnn/: SKILL.md  schema.yaml
skills/pubmed_search/: SKILL.md
skills/rf3/: SKILL.md  schema.yaml
skills/rfdiffusion/: SKILL.md
skills/rfdiffusion3/: SKILL.md  schema.yaml
skills/rso/: SKILL.md
skills/split_chains/: SKILL.md
src/: proxy.ts
(+140 files in other folders)
