[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dyno-phi-cli"
version = "0.1.0"
description = "CLI for the Dyno Phi protein design platform"
requires-python = ">=3.10"
dependencies = []          # zero external dependencies — stdlib only

[project.scripts]
phi = "phi:main"

[tool.setuptools]
py-modules = ["phi"]
